--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
 <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 <style>
   :root {
-    --blue1: #e8f2ff;
-    --blue2: #b8d8f5;
-    --blue3: #88b8e8;
-    --blue4: #5090d0;
-    --hot: #3070b0;
-    --light: #f0f8ff;
-    --light2: #d8e8ff;
-    --text: #3a5c8a;
-    --textl: #7a9fc9;
+    --blue1: #e0f2ff; /* ฟ้าอ่อนมาก */
+    --blue2: #b3d9ff;
+    --blue3: #66b3ff;
+    --blue4: #3399ff; /* ฟ้าเข้มสดใส */
+    --deep: #1a75ff;  /* ฟ้าเข้มลึก */
+    --text: #2c4a73;
+    --textl: #5c8fcc;
   }
   * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
   font-family: 'Mitr', sans-serif;
-  /* ปรับโทนสีพื้นหลังให้เป็น ฟ้า-ม่วง ตามที่เคยแจ้งไว้ หรือคงเดิมตามโค้ดที่คุณส่งมา */
-  background: linear-gradient(160deg, #d6eeff 0%, #e8d5f5 50%, #f5d6ff 100%);
+  /* แก้ไข: เปลี่ยนพื้นหลังเป็นสีฟ้าอ่อนไล่เป็นฟ้าเข้ม */
+  background: linear-gradient(180deg, #e0f2ff 0%, #80c1ff 50%, #3399ff 100%);
+  background-attachment: fixed;
   min-height: 100vh;
   color: var(--text);
   overflow-x: hidden;
@@ -32,19 +31,19 @@ body::before {
 content: '';
 position:fixed; inset:0;
 background:
-radial-gradient(circle at 15% 15%, rgba(136,184,232,0.25) 0%, transparent 45%),
-radial-gradient(circle at 85% 85%, rgba(176,208,240,0.25) 0%, transparent 45%);
+radial-gradient(circle at 15% 15%, rgba(255,255,255,0.4) 0%, transparent 40%),
+radial-gradient(circle at 85% 85%, rgba(0,102,204,0.15) 0%, transparent 40%);
 pointer-events:none; z-index:0;
 }
 
-.sp { position:fixed; pointer-events:none; z-index:0; animation:fl 5s ease-in-out infinite; opacity:0.55; }
+.sp { position:fixed; pointer-events:none; z-index:0; animation:fl 5s ease-in-out infinite; opacity:0.6; }
 .sp:nth-child(1){top:4%;left:5%;font-size:22px;}
-.sp:nth-child(2){top:12%;right:8%;font-size:14px;animation-delay:1s;}
-.sp:nth-child(3){top:38%;left:2%;font-size:12px;animation-delay:2s;}
-.sp:nth-child(4){top:55%;right:4%;font-size:20px;animation-delay:.5s;}
-.sp:nth-child(5){bottom:22%;left:7%;font-size:16px;animation-delay:1.5s;}
-.sp:nth-child(6){bottom:8%;right:6%;font-size:11px;animation-delay:2.5s;}
-@keyframes fl {0%,100%{transform:translateY(0) rotate(0);}50%{transform:translateY(-14px) rotate(8deg);}}
+.sp:nth-child(2){top:12%;right:8%;font-size:18px;animation-delay:1s;}
+.sp:nth-child(3){top:38%;left:2%;font-size:14px;animation-delay:2s;}
+.sp:nth-child(4){top:55%;right:4%;font-size:24px;animation-delay:.5s;}
+.sp:nth-child(5){bottom:22%;left:7%;font-size:20px;animation-delay:1.5s;}
+.sp:nth-child(6){bottom:8%;right:6%;font-size:12px;animation-delay:2.5s;}
+@keyframes fl {0%,100%{transform:translateY(0) scale(1);}50%{transform:translateY(-15px) scale(1.1);}}
 
 .wrap { max-width:480px; margin:0 auto; padding:16px 14px 60px; position:relative; z-index:1; }
 
@@ -52,144 +51,80 @@ pointer-events:none; z-index:0;
 .header { text-align:center; padding:35px 0 20px; animation:fadeUp .7s ease both; }
 
 .shop-name {
+/* แก้ไข: เปลี่ยนจาก 🎀 เป็น 🫧 และขยายขนาด */
 font-size:2.4rem; font-weight:700;
-color: #4080c0;
+color: #ffffff;
 letter-spacing:2px;
 display: flex;
 align-items: center;
 justify-content: center;
 gap: 12px;
-text-shadow: 2px 2px 4px rgba(64,128,192,0.15);
+text-shadow: 0 4px 10px rgba(0,80,160,0.3);
 }
-.shop-sub { font-size:.8rem; color:var(--textl); margin-top:8px; line-height:1.7; }
+.shop-sub { font-size:.85rem; color: #f0f8ff; margin-top:8px; line-height:1.7; font-weight: 300; }
 
 .badges { display:flex; justify-content:center; gap:7px; flex-wrap:wrap; margin-top:11px; }
 .badge {
-background:#fff; border:1.5px solid var(--blue2);
+background:rgba(255,255,255,0.9); border:1.5px solid var(--blue2);
 border-radius:20px; padding:4px 13px;
-font-size:.72rem; color:var(--blue4); font-weight:500;
+font-size:.72rem; color:var(--blue4); font-weight:600;
 }
 
 /* CARDS */
 .card {
-background:rgba(255,255,255,.85); backdrop-filter:blur(12px);
-border:1.5px solid rgba(136,184,232,.35);
+background:rgba(255,255,255,.9); backdrop-filter:blur(15px);
+border:1.5px solid rgba(255,255,255,.5);
 border-radius:22px; padding:20px 18px; margin-bottom:14px;
-box-shadow:0 4px 18px rgba(80,144,208,.08), inset 0 1px 0 rgba(255,255,255,.8);
+box-shadow:0 8px 25px rgba(0,60,120,.12);
 position:relative; overflow:hidden;
 animation:fadeUp .6s ease both;
 }
 .card:nth-child(1){animation-delay:.1s;} .card:nth-child(2){animation-delay:.2s;}
 .card:nth-child(3){animation-delay:.3s;} .card:nth-child(4){animation-delay:.4s;}
-.card:nth-child(5){animation-delay:.5s;} .card:nth-child(6){animation-delay:.55s;}
-.card:nth-child(7){animation-delay:.6s;} .card:nth-child(8){animation-delay:.65s;}
-
-.card::before {
-content: ''; position:absolute; top:-40px; right:-40px;
-width:110px; height:110px;
-background:radial-gradient(circle,rgba(136,184,232,.15) 0%,transparent 70%);
-border-radius:50%;
-}
 
 .ct { font-size:.98rem; font-weight:600; color:var(--blue4); margin-bottom:13px; display:flex; align-items:center; gap:8px; }
-.ct .ic { font-size:1.15rem; }
-
-/* status */
-.status-box {
-background:linear-gradient(135deg,#f0f8ff,#e8f2ff);
-border:1.5px dashed var(--blue3); border-radius:16px;
-padding:15px; text-align:center; margin-bottom:14px;
-animation:fadeUp .5s .12s ease both;
-}
-.s-open { font-size:1.25rem; font-weight:600; color:var(--hot); }
-.s-dot { display:inline-block; width:10px;height:10px; background:#6fcf97; border-radius:50%; margin-right:6px; box-shadow:0 0 0 4px rgba(111,207,151,.25); animation:blink 2s ease-in-out infinite; }
-@keyframes blink{0%,100%{opacity:1;}50%{opacity:.35;}}
-
-/* divider */
-.div { text-align:center; color:var(--blue3); font-size:.85rem; letter-spacing:7px; margin:4px 0 14px; }
-
-/* steps */
-.steps { display:flex; flex-direction:column; gap:11px; }
-.step { display:flex; gap:11px; align-items:flex-start; }
-.sn {
-width:28px;height:28px;border-radius:50%;
-background:linear-gradient(135deg,var(--blue3),var(--blue2));
-display:flex;align-items:center;justify-content:center;
-font-size:.78rem;font-weight:600;color:#fff;flex-shrink:0;
-box-shadow:0 3px 9px rgba(80,144,208,.25);
-}
-.st { font-size:.84rem; color:var(--text); padding-top:4px; line-height:1.6; }
 
 /* image display */
-.img-container {
-display: flex;
-flex-direction: column;
-gap: 15px;
-margin: 12px 0;
-}
-
+.img-container { display: flex; flex-direction: column; gap: 15px; margin: 12px 0; }
 .img-box {
-width: 100%;
-border-radius: 16px;
-overflow: hidden;
-border: 1.5px solid rgba(136,184,232,.3);
-background: #fff;
-box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+width: 100%; border-radius: 16px; overflow: hidden;
+border: 2px solid #eef7ff; background: #fff;
+box-shadow: 0 4px 12px rgba(0,0,0,0.08);
 }
-
-.img-box img {
-width: 100%;
-height: auto;
-display: block;
-transition: transform 0.3s;
-}
-.img-box img:hover { transform: scale(1.02); }
-
-/* links */
-.lnk {
-display:flex; align-items:center; gap:10px;
-background:linear-gradient(135deg,#f5fbff,#f0f8ff);
-border:1.5px solid rgba(136,184,232,.25); border-radius:14px;
-padding:10px 14px; text-decoration:none; color:var(--text);
-font-size:.84rem; transition:all .2s; margin-bottom:9px;
-}
-.lnk:hover { transform:translateX(4px); }
-.lnk-ic { font-size:1.3rem; flex-shrink:0; }
-.lnk-name { font-weight:500; font-size:.88rem; color:var(--blue4); margin-bottom:2px; }
-.lnk-desc { font-size:.75rem; color:var(--textl); }
+.img-box img { width: 100%; height: auto; display: block; transition: transform 0.3s; }
 
 /* CTA */
-.cta-wrap { text-align:center; padding:8px 0; animation:fadeUp .6s .6s ease both; }
+.cta-wrap { text-align:center; padding:15px 0; animation:fadeUp .6s .6s ease both; }
 .cta-btn {
-display:inline-block; width:100%; max-width:300px;
-background:linear-gradient(135deg,#88b8e8,#7a9fc9);
+display:inline-block; width:100%; max-width:280px;
+background: linear-gradient(135deg, #3399ff, #1a75ff);
 color:#fff; font-family: 'Mitr', sans-serif;
-font-size:1rem; font-weight:500; padding:14px 36px;
-border-radius:50px; text-decoration:none; border:none; cursor:pointer;
-box-shadow:0 8px 24px rgba(80,144,208,.3), inset 0 1px 0 rgba(255,255,255,.3);
+font-size:1rem; font-weight:500; padding:15px;
+border-radius:50px; text-decoration:none;
+box-shadow:0 8px 20px rgba(0,80,200,.3);
 transition:all .3s; animation:glow 3s ease-in-out infinite;
 }
-@keyframes glow{0%,100%{box-shadow:0 8px 24px rgba(80,144,208,.3),inset 0 1px 0 rgba(255,255,255,.3);}50%{box-shadow:0 10px 36px rgba(80,144,208,.5),inset 0 1px 0 rgba(255,255,255,.3);}}
+@keyframes glow{0%,100%{transform:scale(1);}50%{transform:scale(1.03); box-shadow:0 10px 25px rgba(0,80,200,.4);}}
 
-.footer { text-align:center; padding:16px 0 8px; font-size:.73rem; color:var(--textl); }
+.footer { text-align:center; padding:16px 0; font-size:.73rem; color:#fff; text-shadow: 0 1px 2px rgba(0,0,0,0.1); }
 
 @keyframes fadeUp { from{opacity:0;transform:translateY(18px);}to{opacity:1;transform:translateY(0);} }
 </style>
 </head>
 <body>
-<div class="sp">✦</div>
-<div class="sp">✨</div>
-<div class="sp">🎨</div>
-<div class="sp">✿</div>
+<div class="sp">🫧</div>
+<div class="sp">💧</div>
+<div class="sp">🫧</div>
+<div class="sp">🌊</div>
 <div class="sp">⋆</div>
 <div class="sp">💙</div>
 
 <div class="wrap">
   <div class="header">
-    <div class="shop-name">🎀 Lula 🎀</div>
+    <div class="shop-name">🫧 Lula 🫧</div>
     <div class="shop-sub">
       ✨ chxb.Lu<br>
-      รับออกแบบลายน้ำ
+      รับออกแบบลายน้ำ สไตล์สดใส
     </div>
     <div class="badges">
       <span class="badge">🎨 ลายน้ำ</span>
@@ -198,33 +133,27 @@ transition:all .3s; animation:glow 3s ease-in-out infinite;
     </div>
   </div>
 
-  <div class="div">✦ · · ✦ · · ✦</div>
-
-  <div class="status-box">
-    <div class="s-open"><span class="s-dot"></span>อ่านลายละเอียดแล้วสั่งเข้ามาได้เลยน้า 💙</div>
-  </div>
-
   <div class="card">
     <div class="ct"><span class="ic">🎨</span> เกี่ยวกับเรา</div>
-    <div style="font-size:.85rem;line-height:1.8;color:#3a5c8a;">
-      ร้านรับออกแบบ <b>ลายน้ำ</b> 🎨 <br><br>
-      เราทำให้ลายน้ำของคุณน่ารักตรงตามใจ พร้อมให้คุณใช้งานได้เลยค่ะ ✨
+    <div style="font-size:.85rem;line-height:1.8;color:var(--text);">
+      ร้านรับออกแบบ <b>ลายน้ำ</b> 🎨 สุดน่ารักก <br><br>
+      สามารถอ่านรายละเอียดงาน จะได้บรีฟได้ตรงตามต้องการมากที่สุดค่ะ ✨
     </div>
   </div>
 
   <div class="card">
-    <div class="ct"><span class="ic">📋</span> ประเภทงานที่รับทำ</div>
+    <div class="ct"><span class="ic">🖼️</span> ผลงานที่ผ่านมา</div>
     <div class="img-container">
       <div>
-        <div style="font-size:.9rem;font-weight:600;color:var(--blue4);margin-bottom:8px;">💙 YCH (Versions 1-8)</div>
+        <div style="font-size:.9rem;font-weight:600;color:var(--blue4);margin-bottom:8px;">💙 YCH Versions</div>
         <div class="img-box">
-          <img src="banner1.jpg" alt="YCH Portfolio">
+          <img src="banner1.jpg" alt="Portfolio 1">
         </div>
       </div>
       <div>
-        <div style="font-size:.9rem;font-weight:600;color:var(--blue4);margin-bottom:8px;">✨ CMS (Character Design)</div>
+        <div style="font-size:.9rem;font-weight:600;color:var(--blue4);margin-bottom:8px;">✨ Character CMS</div>
         <div class="img-box">
-          <img src="banner2.jpg" alt="CMS Portfolio">
+          <img src="banner2.jpg" alt="Portfolio 2">
         </div>
       </div>
     </div>
@@ -232,32 +161,20 @@ transition:all .3s; animation:glow 3s ease-in-out infinite;
 
   <div class="card">
     <div class="ct"><span class="ic">⏱️</span> ระยะเวลาการทำงาน</div>
-    <div class="hi-box">
-      <b>⏰ ระยะเวลา 1-2 วัน/งาน</b><br>
-      <small>ขึ้นอยู่กับความซับซ้อนของงาน</small>
+    <div style="background:linear-gradient(135deg,#e0f2ff,#b3d9ff); border-radius:16px; padding:15px; text-align:center; color:var(--text);">
+      <b>⏰ ประมาณ 1-2 วันต่อหนึ่งงาน</b><br>
+      <small>งานด่วนทักสอบถามคิวได้น้า</small>
     </div>
-  </div>
-
-  <div class="card">
-    <div class="ct"><span class="ic">📱</span> ช่องทางติดต่อ</div>
-    <a href="https://www.facebook.com" class="lnk" target="_blank">
-      <span class="lnk-ic">👤</span>
-      <div><div class="lnk-name">Facebook</div><div class="lnk-desc">ติดต่อสั่งงานได้เลยค่ะ</div></div>
-    </a>
-    <a href="https://www.instagram.com" class="lnk" target="_blank">
-      <span class="lnk-ic">📸</span>
-      <div><div class="lnk-name">Instagram</div><div class="lnk-desc">@chxb.lu · ดูผลงานได้ที่นี่</div></div>
-    </a>
   </div>
 
   <div class="cta-wrap">
     <a href="https://www.facebook.com" class="cta-btn" target="_blank">
-      💙 ติดต่อสั่งงาน
+      💙 ติดต่อสั่งงานทาง Facebook
     </a>
   </div>
 
   <div class="footer">
-    <div>made with 💙 · Lula · ร้านออกแบบลายน้ำ</div>
+    <div>made with 🫧 · Lula · ร้านออกแบบลายน้ำ</div>
   </div>
 </div>
 </body>
