--- a/index.html
+++ b/index.html
@@ -7,117 +7,128 @@
 <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 <style>
   :root {
-    --blue1: #e0f2ff; /* ฟ้าอ่อนมาก */
-    --blue2: #b3d9ff;
-    --blue3: #66b3ff;
-    --blue4: #3399ff; /* ฟ้าเข้มสดใส */
-    --deep: #1a75ff;  /* ฟ้าเข้มลึก */
-    --text: #2c4a73;
-    --textl: #5c8fcc;
+    --blue-bg-start: #e0f2ff;
+    --blue-bg-end: #3399ff;
+    --card-white: rgba(255, 255, 255, 0.95); /* ขยับความเข้มขาวขึ้นเพื่อให้ตัวหนังสือชัด */
+    --text-main: #1a4a73; /* ปรับสีน้ำเงินให้อิ่มและเข้มขึ้นเพื่อให้อ่านง่าย */
+    --text-highlight: #0056b3;
+    --accent-blue: #007bff;
   }
   * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
   font-family: 'Mitr', sans-serif;
-  /* แก้ไข: เปลี่ยนพื้นหลังเป็นสีฟ้าอ่อนไล่เป็นฟ้าเข้ม */
-  background: linear-gradient(180deg, #e0f2ff 0%, #80c1ff 50%, #3399ff 100%);
+  background: linear-gradient(180deg, var(--blue-bg-start) 0%, #80c1ff 50%, var(--blue-bg-end) 100%);
   background-attachment: fixed;
   min-height: 100vh;
-  color: var(--text);
+  color: var(--text-main);
   overflow-x: hidden;
 }
 
-body::before {
-content: '';
-position:fixed; inset:0;
-background:
-radial-gradient(circle at 15% 15%, rgba(255,255,255,0.4) 0%, transparent 40%),
-radial-gradient(circle at 85% 85%, rgba(0,102,204,0.15) 0%, transparent 40%);
-pointer-events:none; z-index:0;
-}
-
+/* Floating Elements */
 .sp { position:fixed; pointer-events:none; z-index:0; animation:fl 5s ease-in-out infinite; opacity:0.6; }
 .sp:nth-child(1){top:4%;left:5%;font-size:22px;}
 .sp:nth-child(2){top:12%;right:8%;font-size:18px;animation-delay:1s;}
-.sp:nth-child(3){top:38%;left:2%;font-size:14px;animation-delay:2s;}
 .sp:nth-child(4){top:55%;right:4%;font-size:24px;animation-delay:.5s;}
-.sp:nth-child(5){bottom:22%;left:7%;font-size:20px;animation-delay:1.5s;}
-.sp:nth-child(6){bottom:8%;right:6%;font-size:12px;animation-delay:2.5s;}
 @keyframes fl {0%,100%{transform:translateY(0) scale(1);}50%{transform:translateY(-15px) scale(1.1);}}
 
 .wrap { max-width:480px; margin:0 auto; padding:16px 14px 60px; position:relative; z-index:1; }
 
-/* HEADER */
+/* HEADER - ปรับให้ตัวหนังสือขาวขอบเงาเด่นๆ */
 .header { text-align:center; padding:35px 0 20px; animation:fadeUp .7s ease both; }
 
 .shop-name {
-/* แก้ไข: เปลี่ยนจาก 🎀 เป็น 🫧 และขยายขนาด */
-font-size:2.4rem; font-weight:700;
+font-size:2.6rem; font-weight:700;
 color: #ffffff;
 letter-spacing:2px;
 display: flex;
 align-items: center;
 justify-content: center;
 gap: 12px;
-text-shadow: 0 4px 10px rgba(0,80,160,0.3);
+/* เพิ่มเงาเข้มเพื่อให้ตัวหนังสือขาวลอยเด่น */
+text-shadow: 2px 4px 8px rgba(0, 40, 100, 0.4);
 }
-.shop-sub { font-size:.85rem; color: #f0f8ff; margin-top:8px; line-height:1.7; font-weight: 300; }
+.shop-sub { 
+  font-size:.9rem; 
+  color: #ffffff; 
+  margin-top:8px; 
+  line-height:1.7; 
+  font-weight: 500;
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
+}
 
 .badges { display:flex; justify-content:center; gap:7px; flex-wrap:wrap; margin-top:11px; }
 .badge {
-background:rgba(255,255,255,0.9); border:1.5px solid var(--blue2);
-border-radius:20px; padding:4px 13px;
-font-size:.72rem; color:var(--blue4); font-weight:600;
+background:#ffffff; border:1.8px solid var(--accent-blue);
+border-radius:20px; padding:5px 15px;
+font-size:.75rem; color:var(--accent-blue); font-weight:700;
+box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
-/* CARDS */
+/* CARDS - ปรับพื้นหลังให้ขาวนวลขึ้นเพื่อตัดกับตัวหนังสือ */
 .card {
-background:rgba(255,255,255,.9); backdrop-filter:blur(15px);
-border:1.5px solid rgba(255,255,255,.5);
-border-radius:22px; padding:20px 18px; margin-bottom:14px;
-box-shadow:0 8px 25px rgba(0,60,120,.12);
+background: var(--card-white);
+backdrop-filter:blur(10px);
+border: 2px solid #ffffff;
+border-radius:24px; padding:22px 20px; margin-bottom:18px;
+box-shadow:0 10px 25px rgba(0, 50, 120, 0.15);
 position:relative; overflow:hidden;
 animation:fadeUp .6s ease both;
 }
-.card:nth-child(1){animation-delay:.1s;} .card:nth-child(2){animation-delay:.2s;}
-.card:nth-child(3){animation-delay:.3s;} .card:nth-child(4){animation-delay:.4s;}
 
-.ct { font-size:.98rem; font-weight:600; color:var(--blue4); margin-bottom:13px; display:flex; align-items:center; gap:8px; }
+.ct { 
+  font-size:1.1rem; 
+  font-weight:700; 
+  color: var(--text-highlight); 
+  margin-bottom:15px; 
+  display:flex; 
+  align-items:center; 
+  gap:10px;
+  border-bottom: 2px solid #eef7ff;
+  padding-bottom: 8px;
+}
 
-/* image display */
-.img-container { display: flex; flex-direction: column; gap: 15px; margin: 12px 0; }
+.ct .ic { font-size:1.2rem; }
+
+/* Content Text */
+.card-body {
+  font-size:.92rem;
+  line-height:1.8;
+  color: var(--text-main);
+  font-weight: 400;
+}
+
+/* Images */
 .img-box {
-width: 100%; border-radius: 16px; overflow: hidden;
-border: 2px solid #eef7ff; background: #fff;
-box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+width: 100%; border-radius: 18px; overflow: hidden;
+border: 2px solid #f0f8ff; background: #fff;
+box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+margin-top: 10px;
 }
-.img-box img { width: 100%; height: auto; display: block; transition: transform 0.3s; }
+.img-box img { width: 100%; height: auto; display: block; }
 
-/* CTA */
-.cta-wrap { text-align:center; padding:15px 0; animation:fadeUp .6s .6s ease both; }
+/* CTA Button */
+.cta-wrap { text-align:center; padding:15px 0; }
 .cta-btn {
-display:inline-block; width:100%; max-width:280px;
-background: linear-gradient(135deg, #3399ff, #1a75ff);
-color:#fff; font-family: 'Mitr', sans-serif;
-font-size:1rem; font-weight:500; padding:15px;
+display:inline-block; width:100%; max-width:300px;
+background: linear-gradient(135deg, #007bff, #0056b3);
+color:#ffffff; font-family: 'Mitr', sans-serif;
+font-size:1.1rem; font-weight:600; padding:16px;
 border-radius:50px; text-decoration:none;
-box-shadow:0 8px 20px rgba(0,80,200,.3);
-transition:all .3s; animation:glow 3s ease-in-out infinite;
+box-shadow: 0 10px 20px rgba(0, 80, 200, 0.4);
+transition: all 0.3s;
 }
-@keyframes glow{0%,100%{transform:scale(1);}50%{transform:scale(1.03); box-shadow:0 10px 25px rgba(0,80,200,.4);}}
+.cta-btn:hover { transform: translateY(-3px); box-shadow: 0 12px 25px rgba(0, 80, 200, 0.5); }
 
-.footer { text-align:center; padding:16px 0; font-size:.73rem; color:#fff; text-shadow: 0 1px 2px rgba(0,0,0,0.1); }
+.footer { text-align:center; padding:20px 0; font-size:.8rem; color:#ffffff; font-weight: 500; }
 
-@keyframes fadeUp { from{opacity:0;transform:translateY(18px);}to{opacity:1;transform:translateY(0);} }
+@keyframes fadeUp { from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);} }
 </style>
 </head>
 <body>
 <div class="sp">🫧</div>
 <div class="sp">💧</div>
 <div class="sp">🫧</div>
-<div class="sp">🌊</div>
-<div class="sp">⋆</div>
-<div class="sp">💙</div>
 
 <div class="wrap">
   <div class="header">
@@ -135,35 +146,22 @@ transition:all .3s; animation:glow 3s ease-in-out infinite;
 
   <div class="card">
     <div class="ct"><span class="ic">🎨</span> เกี่ยวกับเรา</div>
-    <div style="font-size:.85rem;line-height:1.8;color:var(--text);">
-      ร้านรับออกแบบ <b>ลายน้ำ</b> 🎨 สุดน่ารักก <br><br>
-      สามารถอ่านรายละเอียดงาน จะได้บรีฟได้ตรงตามต้องการมากที่สุดค่ะ ✨
+    <div class="card-body">
+      ร้านรับออกแบบ <b>ลายน้ำ</b> 🎨 <br><br>
+      สามารถอ่านรายละเอียดและบรีฟงานตามที่ต้องการได้เลยค่ะ ✨
     </div>
   </div>
 
   <div class="card">
-    <div class="ct"><span class="ic">🖼️</span> ผลงานที่ผ่านมา</div>
-    <div class="img-container">
-      <div>
-        <div style="font-size:.9rem;font-weight:600;color:var(--blue4);margin-bottom:8px;">💙 YCH Versions</div>
-        <div class="img-box">
-          <img src="banner1.jpg" alt="Portfolio 1">
-        </div>
+    <div class="card-body">
+      <p style="font-weight: 600; color: var(--accent-blue);">💙 YCH Versions</p>
+      <div class="img-box">
+        <img src="banner1.jpg" alt="Portfolio 1">
       </div>
-      <div>
-        <div style="font-size:.9rem;font-weight:600;color:var(--blue4);margin-bottom:8px;">✨ Character CMS</div>
-        <div class="img-box">
-          <img src="banner2.jpg" alt="Portfolio 2">
-        </div>
+      <p style="font-weight: 600; color: var(--accent-blue); margin-top: 20px;">✨ Character CMS</p>
+      <div class="img-box">
+        <img src="banner2.jpg" alt="Portfolio 2">
       </div>
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="ct"><span class="ic">⏱️</span> ระยะเวลาการทำงาน</div>
-    <div style="background:linear-gradient(135deg,#e0f2ff,#b3d9ff); border-radius:16px; padding:15px; text-align:center; color:var(--text);">
-      <b>⏰ ประมาณ 1-2 วันต่อหนึ่งงาน</b><br>
-      <small>งานด่วนทักสอบถามคิวได้น้า</small>
     </div>
   </div>
 
