--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ transition: all 0.3s;
     <div class="ct"><span class="ic">🎨</span> เกี่ยวกับเรา</div>
     <div class="card-body">
       ร้านรับออกแบบ <b>ลายน้ำ</b> 🎨 <br><br>
-      สามารถอ่านรายละเอียดและบรีฟงานตามที่ต้องการได้เลยค่ะ ✨
+       รายละเอียดการบรีฟงานที่ข้างล่าง สามารถบรีฟได้ตามที่ต้องการเลยค่ะ ✨
     </div>
   </div>
 
@@ -163,7 +163,7 @@ transition: all 0.3s;
       <div class="img-box">
         <img src="banner1.jpg" alt="Portfolio 1">
       </div>
-      <p style="font-weight: 600; color: var(--accent-blue); margin-top: 20px;">✨ Character CMS</p>
+      <p style="font-weight: 600; color: var(--accent-blue); margin-top: 20px;">✨ CMS Versions</p>
       <div class="img-box">
         <img src="banner2.jpg" alt="Portfolio 2">
       </div>
